UF-11204: Refactoring of API and logic